SustainableChemistryWeb/SustainableChemistryWeb/ChemInfo/Antlr Generated Files/smilesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\wbarr\source\repos\USEPA\sustainable-chemistry-synthesis-expert-framework\SustainableChemistryWeb\SustainableChemistryWeb\ChemInfo\smiles.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class smilesParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, T__123=124, T__124=125, 
		T__125=126, T__126=127, T__127=128, T__128=129, T__129=130, T__130=131, 
		T__131=132, T__132=133, T__133=134, T__134=135, T__135=136, T__136=137, 
		T__137=138, T__138=139, T__139=140, T__140=141, T__141=142, T__142=143, 
		T__143=144, T__144=145, T__145=146, T__146=147, T__147=148, T__148=149, 
		T__149=150, T__150=151, T__151=152, T__152=153, T__153=154, T__154=155, 
		T__155=156, ORGANIC_SYMBOL=157, AROMATIC_SYMBOL=158, WILDCARD=159, DIGIT=160;
	public const int
		RULE_smiles = 0, RULE_chain = 1, RULE_branched_atom = 2, RULE_branch = 3, 
		RULE_ringbond = 4, RULE_bond = 5, RULE_dot = 6, RULE_atom = 7, RULE_symbol = 8, 
		RULE_organic = 9, RULE_aromatic = 10, RULE_halogen = 11, RULE_chiral = 12, 
		RULE_charge = 13, RULE_hcount = 14, RULE_atomclass = 15, RULE_isotope = 16, 
		RULE_element = 17;
	public static readonly string[] ruleNames = {
		"smiles", "chain", "branched_atom", "branch", "ringbond", "bond", "dot", 
		"atom", "symbol", "organic", "aromatic", "halogen", "chiral", "charge", 
		"hcount", "atomclass", "isotope", "element"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'%'", "'-'", "'='", "'#'", "'$'", "':'", "'\\'", 
		"'/'", "'.'", "'['", "']'", "'B'", "'C'", "'N'", "'O'", "'S'", "'P'", 
		"'F'", "'Cl'", "'Br'", "'I'", "'b'", "'c'", "'n'", "'o'", "'p'", "'s'", 
		"'se'", "'as'", "'X'", "'@'", "'@@'", "'@TH1'", "'@TH2'", "'@AL1'", "'@AL2'", 
		"'@SP1'", "'@SP2'", "'@SP3'", "'@TB1'", "'@TB2'", "'@TB3'", "'@TB30'", 
		"'@OH1'", "'@OH2'", "'@OH3'", "'@OH30'", "'+'", "'--'", "'++'", "'H'", 
		"'He'", "'Li'", "'Be'", "'Ne'", "'Na'", "'Mg'", "'Al'", "'Si'", "'Ar'", 
		"'K'", "'Ca'", "'Sc'", "'Ti'", "'V'", "'Cr'", "'Mn'", "'Fe'", "'Co'", 
		"'Ni'", "'Cu'", "'Zn'", "'Ga'", "'Ge'", "'As'", "'Se'", "'Kr'", "'Rb'", 
		"'Sr'", "'Y'", "'Zr'", "'Nb'", "'Mo'", "'Tc'", "'Ru'", "'Rh'", "'Pd'", 
		"'Ag'", "'Cd'", "'In'", "'Sn'", "'Sb'", "'Te'", "'Xe'", "'Cs'", "'Ba'", 
		"'Hf'", "'Ta'", "'W'", "'Re'", "'Os'", "'Ir'", "'Pt'", "'Au'", "'Hg'", 
		"'Tl'", "'Pb'", "'Bi'", "'Po'", "'At'", "'Rn'", "'Fr'", "'Ra'", "'Rf'", 
		"'Db'", "'Sg'", "'Bh'", "'Hs'", "'Mt'", "'Ds'", "'Rg'", "'Cn'", "'Fl'", 
		"'Lv'", "'La'", "'Ce'", "'Pr'", "'Nd'", "'Pm'", "'Sm'", "'Eu'", "'Gd'", 
		"'Tb'", "'Dy'", "'Ho'", "'Er'", "'Tm'", "'Yb'", "'Lu'", "'Ac'", "'Th'", 
		"'Pa'", "'U'", "'Np'", "'Pu'", "'Am'", "'Cm'", "'Bk'", "'Cf'", "'Es'", 
		"'Fm'", "'Md'", "'No'", "'Lr'", null, null, "'*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "ORGANIC_SYMBOL", "AROMATIC_SYMBOL", "WILDCARD", "DIGIT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "smiles.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static smilesParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public smilesParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public smilesParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SmilesContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(smilesParser.Eof, 0); }
		public ChainContext chain() {
			return GetRuleContext<ChainContext>(0);
		}
		public SmilesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_smiles; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterSmiles(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitSmiles(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSmiles(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SmilesContext smiles() {
		SmilesContext _localctx = new SmilesContext(Context, State);
		EnterRule(_localctx, 0, RULE_smiles);
		int _la;
		try {
			State = 47;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30))) != 0)) {
					{
					State = 36; chain(0);
					}
				}

				State = 39; Match(Eof);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__0) {
					{
					State = 40; Match(T__0);
					State = 41; chain(0);
					State = 42; Match(T__1);
					}
				}

				State = 46; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChainContext : ParserRuleContext {
		public Branched_atomContext branched_atom() {
			return GetRuleContext<Branched_atomContext>(0);
		}
		public ChainContext chain() {
			return GetRuleContext<ChainContext>(0);
		}
		public BondContext bond() {
			return GetRuleContext<BondContext>(0);
		}
		public DotContext dot() {
			return GetRuleContext<DotContext>(0);
		}
		public ChainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chain; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterChain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitChain(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChainContext chain() {
		return chain(0);
	}

	private ChainContext chain(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ChainContext _localctx = new ChainContext(Context, _parentState);
		ChainContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_chain, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 50; branched_atom();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 64;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 62;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
					case 1:
						{
						_localctx = new ChainContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_chain);
						State = 52;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 53; branched_atom();
						}
						break;
					case 2:
						{
						_localctx = new ChainContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_chain);
						State = 54;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 55; bond();
						State = 56; branched_atom();
						}
						break;
					case 3:
						{
						_localctx = new ChainContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_chain);
						State = 58;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 59; dot();
						State = 60; branched_atom();
						}
						break;
					}
					} 
				}
				State = 66;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Branched_atomContext : ParserRuleContext {
		public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public RingbondContext[] ringbond() {
			return GetRuleContexts<RingbondContext>();
		}
		public RingbondContext ringbond(int i) {
			return GetRuleContext<RingbondContext>(i);
		}
		public BranchContext[] branch() {
			return GetRuleContexts<BranchContext>();
		}
		public BranchContext branch(int i) {
			return GetRuleContext<BranchContext>(i);
		}
		public BondContext[] bond() {
			return GetRuleContexts<BondContext>();
		}
		public BondContext bond(int i) {
			return GetRuleContext<BondContext>(i);
		}
		public Branched_atomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_branched_atom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterBranched_atom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitBranched_atom(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBranched_atom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Branched_atomContext branched_atom() {
		Branched_atomContext _localctx = new Branched_atomContext(Context, State);
		EnterRule(_localctx, 4, RULE_branched_atom);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; atom();
			State = 74;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 69;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9))) != 0)) {
						{
						State = 68; bond();
						}
					}

					State = 71; ringbond();
					}
					} 
				}
				State = 76;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			State = 80;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 77; branch();
					}
					} 
				}
				State = 82;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BranchContext : ParserRuleContext {
		public ChainContext chain() {
			return GetRuleContext<ChainContext>(0);
		}
		public BondContext bond() {
			return GetRuleContext<BondContext>(0);
		}
		public DotContext dot() {
			return GetRuleContext<DotContext>(0);
		}
		public BranchContext branch() {
			return GetRuleContext<BranchContext>(0);
		}
		public BranchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_branch; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterBranch(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitBranch(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBranch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BranchContext branch() {
		BranchContext _localctx = new BranchContext(Context, State);
		EnterRule(_localctx, 6, RULE_branch);
		try {
			State = 101;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 83; Match(T__0);
				State = 84; chain(0);
				State = 85; Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87; Match(T__0);
				State = 88; bond();
				State = 89; chain(0);
				State = 90; Match(T__1);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 92; Match(T__0);
				State = 93; dot();
				State = 94; chain(0);
				State = 95; Match(T__1);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 97; Match(T__0);
				State = 98; branch();
				State = 99; Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RingbondContext : ParserRuleContext {
		public ITerminalNode[] DIGIT() { return GetTokens(smilesParser.DIGIT); }
		public ITerminalNode DIGIT(int i) {
			return GetToken(smilesParser.DIGIT, i);
		}
		public RingbondContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ringbond; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterRingbond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitRingbond(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRingbond(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RingbondContext ringbond() {
		RingbondContext _localctx = new RingbondContext(Context, State);
		EnterRule(_localctx, 8, RULE_ringbond);
		try {
			State = 107;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 103; Match(T__2);
				State = 104; Match(DIGIT);
				State = 105; Match(DIGIT);
				}
				}
				break;
			case DIGIT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 106; Match(DIGIT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BondContext : ParserRuleContext {
		public BondContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bond; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterBond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitBond(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBond(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BondContext bond() {
		BondContext _localctx = new BondContext(Context, State);
		EnterRule(_localctx, 10, RULE_bond);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DotContext : ParserRuleContext {
		public DotContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dot; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterDot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitDot(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DotContext dot() {
		DotContext _localctx = new DotContext(Context, State);
		EnterRule(_localctx, 12, RULE_dot);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtomContext : ParserRuleContext {
		public SymbolContext symbol() {
			return GetRuleContext<SymbolContext>(0);
		}
		public IsotopeContext isotope() {
			return GetRuleContext<IsotopeContext>(0);
		}
		public ChiralContext chiral() {
			return GetRuleContext<ChiralContext>(0);
		}
		public HcountContext hcount() {
			return GetRuleContext<HcountContext>(0);
		}
		public ChargeContext charge() {
			return GetRuleContext<ChargeContext>(0);
		}
		public AtomclassContext atomclass() {
			return GetRuleContext<AtomclassContext>(0);
		}
		public OrganicContext organic() {
			return GetRuleContext<OrganicContext>(0);
		}
		public AromaticContext aromatic() {
			return GetRuleContext<AromaticContext>(0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterAtom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitAtom(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtomContext atom() {
		AtomContext _localctx = new AtomContext(Context, State);
		EnterRule(_localctx, 14, RULE_atom);
		int _la;
		try {
			State = 134;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__11:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 113; Match(T__11);
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==DIGIT) {
					{
					State = 114; isotope();
					}
				}

				State = 117; symbol();
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48))) != 0)) {
					{
					State = 118; chiral();
					}
				}

				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__52) {
					{
					State = 121; hcount();
					}
				}

				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__49) | (1L << T__50) | (1L << T__51))) != 0)) {
					{
					State = 124; charge();
					}
				}

				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__7) {
					{
					State = 127; atomclass();
					}
				}
